--- a/templates/house-detail.html
+++ b/templates/house-detail.html
@@ -15,7 +15,7 @@
     <title>House Detail</title>
 </head>
 <body>
-<!-- Top nav bar -->
+<!-- Header session -->
 <div class="top-bar w-100">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-dark">
@@ -151,5 +151,337 @@
     </nav>
 
 </div>
+<!--Header session end-->
+
+<!--Body session-->
+<div class="container">
+
+    <!--        links category-->
+    <div class="top-link mb-2">
+        <a href="#" class="text-decoration-none">
+            Bán
+        </a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                  d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
+        </svg>
+        <a href="#" class="text-decoration-none">
+            Lâm Đồng
+        </a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                  d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
+        </svg>
+        <a href="#" class="text-decoration-none">
+            Bảo Lộc
+        </a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                  d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
+        </svg>
+        <a href="#" class="text-decoration-none">
+            Lộc Tiến
+        </a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                  d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
+        </svg>
+        <span>
+                14, Nguyễn Tuân
+            </span>
+    </div>
+    <!--    links category end-->
+
+    <!--    post's contents-->
+    <div class="row g-5 mb-5">
+        <div class="col-md-9">
+            <div class="pictures mb-2">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active"
+                                aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../styles/images/backgroud-search.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../styles/images/backgroud-search.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../styles/images/backgroud-search.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+
+            <article class="blog-post">
+                <!--                Tiêu đề bài đăng + ảnh minh họa-->
+                <h2 class="blog-post-title">Bán lô đất gần trường ĐH TDT Bảo Lộc</h2>
+                <p class="blog-post-meta">28 tháng 4 năm 2021 bởi Đỗ Duy Linh</p>
+                <p>Bán lô đất gần trường đại học Tôn Đức Thắng cơ sở Bảo Lộc. (mô tả ngắn)</p>
+
+                <hr>
+
+                <!--                Thông tin số liệu-->
+                <h4>Thông tin số liệu</h4>
+                <p>This is an example blockquote in action:</p>
+
+                <hr>
+
+                <!--Thông tin mô tả-->
+                <h4>Thông tin mô tả</h4>
+                <p>Tiêu đề mô tả</p>
+                <ul>
+                    <li>DT 200m<sup>2</sup> giá 10,000 vnđ</li>
+                    <li>2 lầu</li>
+                    <li>liên hệ: 0919xxxxxx</li>
+                </ul>
+
+                <hr>
+
+                <!--                Đặc điểm BDS-->
+                <h4>Đặc điểm bất động sản</h4>
+                <div class="table-info">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="row">
+                                <div class="icon col-1 text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-aspect-ratio" viewBox="0 0 16 16">
+                                        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h13A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5v-9zM1.5 3a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z"/>
+                                        <path d="M2 4.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H3v2.5a.5.5 0 0 1-1 0v-3zm12 7a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1 0-1H13V8.5a.5.5 0 0 1 1 0v3z"/>
+                                    </svg>
+                                </div>
+                                <div class="col-6 fw-bolder">Diện tích</div>
+                                <div class="col-5 text-start">100m<sup>2</sup></div>
+                            </div>
+                            <div class="row">
+                                <div class="icon col-1 text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-house-door" viewBox="0 0 16 16">
+                                        <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+                                    </svg>
+                                </div>
+                                <div class="col-6 fw-bolder">Mặt tiền</div>
+                                <div class="col-5 text-start">5m<sup>2</sup></div>
+                            </div>
+                            <div class="row">
+                                <div class="icon col-1 text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-compass" viewBox="0 0 16 16">
+                                        <path d="M8 16.016a7.5 7.5 0 0 0 1.962-14.74A1 1 0 0 0 9 0H7a1 1 0 0 0-.962 1.276A7.5 7.5 0 0 0 8 16.016zm6.5-7.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                                        <path d="m6.94 7.44 4.95-2.83-2.83 4.95-4.949 2.83 2.828-4.95z"/>
+                                    </svg>
+                                </div>
+                                <div class="col-6 fw-bolder">Hướng nhà</div>
+                                <div class="col-5 text-start">Đông</div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="row">
+                                <div class="icon col-1 text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-cash" viewBox="0 0 16 16">
+                                        <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
+                                        <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V4zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2H3z"/>
+                                    </svg>
+                                </div>
+                                <div class="col-6 fw-bolder">Giá</div>
+                                <div class="col-5 text-start">1,2 tỷ</div>
+                            </div>
+                            <div class="row">
+                                <div class="icon col-1 text-center">
+                                    <svg width="16px" height="16px" viewBox="0 0 48 48" version="1.1"
+                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+                                        <title>road</title>
+                                        <desc>Created with Sketch.</desc>
+                                        <g id="road" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                                           stroke-linecap="round" stroke-linejoin="round">
+                                            <rect width="48" height="48" fill="white" fill-opacity="0.01"/>
+                                            <g id="编组" transform="translate(6.000000, 5.091863)" stroke="#000000"
+                                               stroke-width="4">
+                                                <path d="M5,0.908136641 L0,36.9081366" id="路径-9"></path>
+                                                <path d="M36.9287415,0.908136641 L31.9643708,36.8633744" id="路径-9"
+                                                      transform="translate(33.964371, 18.886476) scale(-1, 1) translate(-33.964371, -18.886476) "></path>
+                                                <path d="M18,0.908136641 L18,6.90813664" id="路径-10"></path>
+                                                <path d="M18,29.9081366 L18,36.9081366" id="路径-10"></path>
+                                                <path d="M18,14.9081366 L18,21.9081366" id="路径-10"></path>
+                                            </g>
+                                        </g>
+                                    </svg>
+
+                                </div>
+                                <div class="col-6 fw-bolder">Đường vào</div>
+                                <div class="col-5 text-start">5m<sup>2</sup></div>
+                            </div>
+                            <div class="row">
+                                <div class="icon col-1 text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-file-earmark-check" viewBox="0 0 16 16">
+                                        <path d="M10.854 7.854a.5.5 0 0 0-.708-.708L7.5 9.793 6.354 8.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
+                                        <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z"/>
+                                    </svg>
+                                </div>
+                                <div class="col-6 fw-bolder">Pháp lý</div>
+                                <div class="col-5 text-start">Sổ đỏ/hồng</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <!--                Xem trên bản đồ-->
+                <h4>Xem trên bản đồ</h4>
+                <p>Thêm api google map vào đây</p>
+
+                <hr>
+
+                <!--Thông tin bài post-->
+                <div class="row">
+                    <div class="col-3">Ngày đăng</div>
+                    <div class="col-3">Ngày hết hạn</div>
+                    <div class="col-3">Loại tin</div>
+                    <div class="col-3">Mã tin</div>
+                </div>
+                <div class="row">
+                    <div class="col-3 fw-bolder">28/04/2022</div>
+                    <div class="col-3 fw-bolder">28/04/2022</div>
+                    <div class="col-3 fw-bolder">Tin thường</div>
+                    <div class="col-3 fw-bolder">00000000</div>
+                </div>
+                <button type="button" class="btn btn-outline-danger mt-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                         class="bi bi-flag" viewBox="0 0 16 16">
+                        <path d="M14.778.085A.5.5 0 0 1 15 .5V8a.5.5 0 0 1-.314.464L14.5 8l.186.464-.003.001-.006.003-.023.009a12.435 12.435 0 0 1-.397.15c-.264.095-.631.223-1.047.35-.816.252-1.879.523-2.71.523-.847 0-1.548-.28-2.158-.525l-.028-.01C7.68 8.71 7.14 8.5 6.5 8.5c-.7 0-1.638.23-2.437.477A19.626 19.626 0 0 0 3 9.342V15.5a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 1 0v.282c.226-.079.496-.17.79-.26C4.606.272 5.67 0 6.5 0c.84 0 1.524.277 2.121.519l.043.018C9.286.788 9.828 1 10.5 1c.7 0 1.638-.23 2.437-.477a19.587 19.587 0 0 0 1.349-.476l.019-.007.004-.002h.001M14 1.221c-.22.078-.48.167-.766.255-.81.252-1.872.523-2.734.523-.886 0-1.592-.286-2.203-.534l-.008-.003C7.662 1.21 7.139 1 6.5 1c-.669 0-1.606.229-2.415.478A21.294 21.294 0 0 0 3 1.845v6.433c.22-.078.48-.167.766-.255C4.576 7.77 5.638 7.5 6.5 7.5c.847 0 1.548.28 2.158.525l.028.01C9.32 8.29 9.86 8.5 10.5 8.5c.668 0 1.606-.229 2.415-.478A21.317 21.317 0 0 0 14 7.655V1.222z"/>
+                    </svg>
+                    Báo cáo bài đăng
+                </button>
+            </article>
+
+
+        </div>
+
+        <div class="col-3">
+            <div class="position-sticky" style="top: 2rem;">
+                <!--                Avatar poster-->
+                <div class="card">
+                    <img src="../styles/images/avatar-sample.jpg" class="rounded-circle w-25 h-25 mt-3 mb-1 mx-auto"
+                         alt="...">
+                    <div class="card-body">
+                        <p class="text-center">Được đăng bởi</p>
+                        <h6 class="card-title text-center">Mr. Đỗ Duy Linh</h6>
+                        <a href="#" class="card-text text-decoration-none text-center">Xem thêm xxx tin khác</a>
+                        <a href="#" class="btn btn-outline-success w-100">Liên hệ</a>
+                        <a href="#" class="btn btn-outline-danger w-100 mt-1">Báo cáo</a>
+                    </div>
+                </div>
+                <!--                Avatar poster end-->
+
+
+            </div>
+        </div>
+    </div>
+    <!--    post's contents end-->
+
+</div>
+
+
+<!--Body session end-->
+
+<!--Footer session-->
+<div class="bg-light p-3">
+    <footer class="py-5">
+        <div class="row">
+            <div class="col-2">
+                <h5>Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                </ul>
+            </div>
+
+            <div class="col-2">
+                <h5>Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                </ul>
+            </div>
+
+            <div class="col-2">
+                <h5>Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                </ul>
+            </div>
+
+            <div class="col-4 offset-1">
+                <form>
+                    <h5>Subscribe to our newsletter</h5>
+                    <p>Monthly digest of whats new and exciting from us.</p>
+                    <div class="d-flex w-100 gap-2">
+                        <label for="newsletter1" class="visually-hidden">Email address</label>
+                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                        <button class="btn btn-primary" type="button">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="d-flex justify-content-between py-4 my-4 border-top">
+            <p>&copy; 2021 Company, Inc. All rights reserved.</p>
+            <ul class="list-unstyled d-flex">
+                <li class="ms-3"><a class="link-dark" href="#">
+                    <svg class="bi" width="24" height="24">
+                        <use xlink:href="#twitter"/>
+                    </svg>
+                </a></li>
+                <li class="ms-3"><a class="link-dark" href="#">
+                    <svg class="bi" width="24" height="24">
+                        <use xlink:href="#instagram"/>
+                    </svg>
+                </a></li>
+                <li class="ms-3"><a class="link-dark" href="#">
+                    <svg class="bi" width="24" height="24">
+                        <use xlink:href="#facebook"/>
+                    </svg>
+                </a></li>
+            </ul>
+        </div>
+    </footer>
+</div>
+<!--Footer session end-->
 </body>
 </html>
